# SuperRobotTaisenUXTempTools

./: CMakeLists.txt  README.md
src/CRLFText/: CMakeLists.txt  CRLFText.cpp
src/CheckOrigText/: CMakeLists.txt  CheckOrigText.cpp
src/FormatText/: CMakeLists.txt  FormatText.cpp
src/RemapText/: CMakeLists.txt  RemapText.cpp
